MD Downloads: reset list tracker when renderer crashes

R=tommycli@chromium.org
BUG=610234

Review-Url: https://codereview.chromium.org/1960223002
Cr-Commit-Position: refs/heads/master@{#392476}

Former-commit-id: 3ace0dbc408422826a06f2e96943f62b77376145